--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -60,7 +60,7 @@ spec:
     spec:
       containers:
       - name: springappcontainer
-        image: dockerhandson/spring-boot-mongo
+        image: 250729537749.dkr.ecr.ap-south-1.amazonaws.com/spring-mongo:11
         ports:
         - containerPort: 8080
         env:
